# saaschurn-cli

./: ARCHITECTURE.md  README.md  SPRINT_LOG.md  acceptance_tests.py  api.py  churn.py  churn_calculator.py  churn_engine.py  cli.py  exporter.py  fetchers.py  main.py  mrr_calculator.py  project.json  pyproject.toml  setup.py  slack.py  slack_client.py  stripe.py  stripe_client.py  tests.py
SaaSChurn_CLI.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
cli/: health.py  main.py
saaschurn/: __init__.py  __main__.py  api.py  calculators.py  churn.py  churn_calculator.py  churn_engine.py  cli.py  core.py  engine.py  fetchers.py  output.py  reporter.py  slack.py  slack_client.py  stripe.py  stripe_client.py
saaschurn.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
saaschurn_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/SaaSChurn_CLI.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/saaschurn/: __init__.py  calculators.py  cli.py  fetchers.py
src/saaschurn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/saaschurn_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: acceptance_tests.py  conftest.py  test_ac.py  test_cli.py  test_fetchers.py  test_saaschurn.py  test_saastrun.py
