[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saaschurn-cli"
version = "0.1.0"
description = "A Python CLI tool to automate SaaS client health reporting and churn prediction across Stripe and Slack."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "stripe",
    "slack-sdk",
    "rich",
    "requests",
]